--- a/_posts/2020-04-02-hello.markdown
+++ b/_posts/2020-04-02-hello.markdown
@@ -17,9 +17,9 @@ tags:
 历时半天，个人博客已经搭建完成，我后续会在这里持续更新Java后端技术知识。之前学习Android几年来记录的笔记内容非常少，加上没有系统的持续下去，走了不少弯路。作为技术人员，深知唯有持续学习和总结，方能持续精进。自己竟然已经转型Java，在这里给自己定下几个目标，与大家分享自己的成长过程。
 
 **坚持几个目标**：
-1. 每月更新2篇以上高质量技术文章
-2. 每2月阅读1本技术书籍，并分享总结
-3. 持续上面2点
+<!-- 1. 每月更新2篇以上高质量技术文章 -->
+<!-- 2. 每2月阅读1本技术书籍，并分享总结 -->
+<!-- 3. 持续上面2点 -->
 
 
 
