add spring chapter2

--- a/_posts/2020-04-02-hello.markdown
+++ b/_posts/2020-04-02-hello.markdown
@@ -14,12 +14,21 @@ tags:
 
 
 ## 起步
-历时半天，个人博客已经搭建完成，我后续会在这里持续更新Java后端技术知识。之前学习Android几年来记录的笔记内容非常少，加上没有系统的持续下去，走了不少弯路。作为技术人员，深知唯有持续学习和总结，方能持续精进。自己竟然已经转型Java，在这里给自己定下几个目标，与大家分享自己的成长过程。
+历时半天，个人博客已经搭建完成，我后续会在这里持续更新Java后端技术知识。之前学习Android几年来记录的笔记内容非常少，加上没有系统的持续下去，走了不少弯路。作为技术人员，深知唯有持续学习和总结，方能持续精进。自己竟然已经转型Java，后面会在博客上更新自己的学习笔记和成长过程。
 
-**坚持几个目标**：
-<!-- 1. 每月更新2篇以上高质量技术文章 -->
-<!-- 2. 每2月阅读1本技术书籍，并分享总结 -->
-<!-- 3. 持续上面2点 -->
+**以下内容更新于2021-03-21**
+
+### 2020
+
+- Android开发内部转岗到Java后台开发
+- 这一年工作上需要掌握的东西比较多，大部分时间都花在项目编码上，熟悉常规功能开发中间件和Activiti等，成为一名合格的CRUD Boy，少部分时间熟悉了下大数据基础知识
+- 所以平时都是看完学习资料和视频没有花太多时间去总结和记录笔记，基本上都是记录一些简单的知识点放到简书上
+
+### 2021
+
+- 今年工作上公司要开始搭中台，趁机会学习完成分布式微服务中间件基础课程，阅读相关中间件源码，输出笔记，暂时不会发布到网站
+- 之前学习的相关资料和视频再快速过一遍，总结学习笔记发布到博客上
+- 补下基础知识，数据结构+算法以及设计模式，后续面试准备
 
 
 
