--- a/_posts/2020-04-02-hello.markdown
+++ b/_posts/2020-04-02-hello.markdown
@@ -4,7 +4,7 @@ title:      "开篇"
 subtitle:   " \"Hello Blog\""
 date:       2020-04-02 11:00:00
 author:     "snowball"
-header-img: "img/post-bg.jpg"
+header-img: "img/home-bg-o.jpg"
 tags:
     - 生活
     - 技术
