--- a/_posts/2020-04-02-hello.markdown
+++ b/_posts/2020-04-02-hello.markdown
@@ -13,8 +13,8 @@ tags:
 <!-- > “Yeah It's on. ” -->
 
 
-## 起步
-历时半天，个人博客已经搭建完成，我后续会在这里持续更新Java后端技术知识。之前学习Android几年来记录的笔记内容非常少，加上没有系统的持续下去，走了不少弯路。作为技术人员，深知唯有持续学习和总结，方能持续精进。自己竟然已经转型Java，后面会在博客上更新自己的学习笔记和成长过程。
+### 起步
+历时半天，个人博客已经搭建完成，我后续会在这里持续更新Java后端技术知识。之前学习Android几年来记录的笔记内容非常少，加上没有系统的持续下去，走了不少弯路。作为技术人员，深知唯有持续学习和总结，方能持续精进。自己既然已经转型Java，后面会在博客上更新自己的学习笔记和成长过程，即能提升自己的总结能力，也能方便日后复习相关知识。
 
 **以下内容更新于2021-03-21**
 
@@ -22,7 +22,7 @@ tags:
 
 - Android开发内部转岗到Java后台开发
 - 这一年工作上需要掌握的东西比较多，大部分时间都花在项目编码上，熟悉常规功能开发中间件和Activiti等，成为一名合格的CRUD Boy，少部分时间熟悉了下大数据基础知识
-- 所以平时都是看完学习资料和视频没有花太多时间去总结和记录笔记，基本上都是记录一些简单的知识点放到简书上
+- 平时都是看完学习资料和视频没有花太多时间去总结和记录笔记，基本上都是记录一些简单的知识点笔记放到简书上
 
 ### 2021
 
