--- a/_posts/2021-03-21-Spring专题-0-目录.markdown
+++ b/_posts/2021-03-21-Spring专题-0-目录.markdown
@@ -31,3 +31,4 @@ tags:
 
 ### [8. Spring解析配置类以及扫描源码解析](https://www.snowballzz.com/2021/04/08/Spring%E4%B8%93%E9%A2%98-8-Spring%E8%A7%A3%E6%9E%90%E9%85%8D%E7%BD%AE%E7%B1%BB%E4%BB%A5%E5%8F%8A%E6%89%AB%E6%8F%8F%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90/)
 
+### [9. Spring中的推断构造方法的底层原理分析](https://www.snowballzz.com/2021/04/08/Spring%E4%B8%93%E9%A2%98-9-Spring%E4%B8%AD%E7%9A%84%E6%8E%A8%E6%96%AD%E6%9E%84%E9%80%A0%E6%96%B9%E6%B3%95%E7%9A%84%E5%BA%95%E5%B1%82%E5%8E%9F%E7%90%86%E5%88%86%E6%9E%90/)
